--- a/CleanArch/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
+++ b/CleanArch/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\CleanArch.Infra.Data.csproj" />
+    <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
+  </ItemGroup>
+
 </Project>
