--- a/CleanArch/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
+++ b/CleanArch/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\CleanArch.Infra.Data.csproj" />
     <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
+    <ProjectReference Include="..\CleanArch.Infra.Bus\CleanArch.Infra.Bus.csproj" />
   </ItemGroup>
 
 </Project>
